# lingua-fractum

./: .gitignore  QUICK_START_TRAINING.md  README.md  pyproject.toml  test_system.py
docs/: ADMIN_PANEL.md  API.md  EXAMPLES.md  GETTING_STARTED.md  LM_STUDIO.md  README.md  TRAINING.md
scripts/: train_poetry_model.sh
src/poema_algoritmo/: __init__.py  admin.py  epub_processor.py  lm_studio_client.py  main.py  poem_generator.py  poetry_agent.py  train_model.py
src/poema_algoritmo/static/: admin.css  admin.html  admin.js  index.html  script.js  style.css
