[project]
name = "poema-algoritmo"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "python-multipart>=0.0.6",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.0",
    "datasets>=2.14.0",
    "accelerate>=0.24.0",
    "evaluate>=0.4.0",
]

[tool.poetry]
packages = [{include = "poema_algoritmo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
poema = "poema_algoritmo.main:main"
